--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@storybook/react": "^6.3.5",
     "babel-loader": "^8.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
