creating a script to get a token.css from token.js pt1

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
+    "build-custom-properties": "node ./scripts/build-custom-properties",
     "build-storybook": "build-storybook"
   },
   "keywords": [],
