--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,11 @@
     "es2021": true,
     "commonjs": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
