enhancement(editor config): add more rules

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,9 @@ root = true
 indent_size = 2
 indent_style = space
 insert_final_newline = true
+charset = utf-8
 max_line_length = 80
 trim_trailing_whitespace = true
+
+[CHANGELOG.md]
+indent_size = false
