--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-custom-properties": "node ./scripts/build-custom-properties",
     "build-storybook": "build-storybook",
     "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint-fix": "eslint . --fix",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "husky": "^4.2.5",
+    "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
     "prettier": "^2.3.2"
   },
@@ -33,15 +34,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "*.js": "eslint --cache --fix"
   }
 }
