--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "components",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@alanmaranto/components",
+  "version": "0.0.0",
+  "description": "A components library to create apps from zero to production",
   "main": "index.js",
   "scripts": {
     "storybook": "start-storybook -p 6006 -s ./assets",
