--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@alanmaranto/components",
   "version": "0.0.0",
+  "private": false,
   "description": "A components library to create apps from zero to production",
   "main": "index.js",
   "scripts": {
@@ -30,7 +31,7 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
