--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
     "lint-staged": "^11.1.1",
     "prettier": "^2.3.2"
   },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "minireset.css": "0.0.7"
+  },
   "dependencies": {
     "classnames": "2.3.1",
+    "minireset.css": "0.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-is": "17.0.2"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
