--- a/package.json
+++ b/package.json
@@ -4,42 +4,54 @@
   "private": false,
   "description": "A components library to create apps from zero to production",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alanmaranto/Productivity-Design-System.git"
+  },
   "scripts": {
     "storybook": "start-storybook -p 6006 -s ./assets",
-    "build-custom-properties": "node ./scripts/build-custom-properties",
+    "build-tokens": "node ./scripts/build-custom-properties",
     "build-storybook": "build-storybook",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/preset-env": "7.15.0",
+    "@babel/preset-react": "7.14.5",
     "@storybook/addon-actions": "^6.3.5",
     "@storybook/addon-essentials": "^6.3.5",
     "@storybook/addon-links": "^6.3.5",
+    "@storybook/addon-storyshots": "6.3.5",
     "@storybook/react": "^6.3.5",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "26.3.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-require-context-hook": "1.0.0",
+    "babel-plugin-transform-require-context": "0.1.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.4.2",
     "lint-staged": "^11.1.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-is": "16.13.1",
+    "react-test-renderer": "17.0.2",
+    "require-context.macro": "1.2.2"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "minireset.css": "0.0.7"
-  },
-  "dependencies": {
-    "classnames": "2.3.1",
     "minireset.css": "0.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-is": "17.0.2"
+    "react": "16.13.1",
+    "classnames": "2.3.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
