--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "26.3.0",
     "babel-loader": "8.1.0",
     "chromatic": "5.9.2",
+    "enquirer": "2.3.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
