--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-dom": "16.13.1",
     "react-is": "16.13.1",
     "react-test-renderer": "17.0.2",
-    "semantic-release": "^17.4.7"
+    "semantic-release": "17.4.7"
   },
   "peerDependencies": {
     "classnames": "2.3.1",
