feat(): add release semantic config

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,6 +1,6 @@
 {
   "release": {
-    "branches": ["master", "next"]
+    "branches": ["main", "next"]
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
