refactor: scripts and build-custom-properties

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,10 @@
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
