--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": ["stylelint-prettier/recommended"]
+  "extends": [
+    "stylelint-config-recommended",
+    "stylelint-config-idiomatic-order"
+  ],
+  "rules": {
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ]
+  }
 }
