--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alanmaranto/components",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "private": false,
   "description": "A components library to create apps from zero to production",
   "main": "index.js",
