--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint": "run-p lint:*",
     "prepare": "husky install",
     "test": "jest",
+    "test-v": "jest --verbose",
     "cc": "node ./scripts/create-component"
   },
   "keywords": [],
