--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  release:
+  build:
     name: Build, Lint, and Test
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     runs-on: ubuntu-18.04
