fix(job): delete lint json

--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "lint:css:stylelint:fix": "npm run lint:css:stylelint --fix",
     "lint:css:stylelint": "stylelint '**/*.css' --ignore-path .gitignore",
     "lint:css": "npm run lint:css:stylelint",
-    "lint:fix": "run-p lint:js:fix lint:json:fix lint:css:fix ",
+    "lint:fix": "run-p lint:js:fix lint:css:fix ",
     "lint:js:fix": "npm run lint:js --fix",
     "lint:js": "eslint --cache --ignore-path .gitignore '**/*.js'",
-    "lint:json:fix": "npm run lint:json --write",
-    "lint:json": "prettier '**/*.json' --list-different --ignore-path .gitignore",
-    "lint": "run-p lint:js lint:json lint:css",
+    "lint": "run-p lint:js lint:css",
     "test:watch": "CONSOLE_LEVEL=debug npm run test --watch",
     "prepare": "husky install",
     "test": "jest",
