--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-jest": "26.3.0",
     "babel-loader": "8.1.0",
     "chromatic": "5.9.2",
+    "classnames": "2.3.1",
     "concurrently": "6.3.0",
     "enquirer": "2.3.6",
     "eslint": "^7.32.0",
