--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "26.4.2",
     "lint-staged": "^11.1.1",
+    "minireset.css": "0.0.7",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.2",
     "react": "16.13.1",
