feat: install semantic-release git

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:storybook": "build-storybook",
     "build:tokens": "node ./scripts/build-custom-properties",
     "build": "run-s build:*",
+    "build:docs": "npm run build:tokens && npm run build:storybook --docs",
     "cc": "node ./scripts/create-component",
     "deploy:prod": "run-s build deploy:vercel:prod",
     "deploy:stag": "run-s build deploy:vercel:stag",
@@ -47,6 +48,7 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "7.15.0",
     "@babel/preset-react": "7.14.5",
+    "@semantic-release/git": "9.0.0",
     "@storybook/addon-actions": "^6.3.5",
     "@storybook/addon-essentials": "^6.3.5",
     "@storybook/addon-links": "^6.3.5",
