--- a/package.json
+++ b/package.json
@@ -90,5 +90,11 @@
   "lint-staged": {
     "*.js": "npm run lint:js",
     "*.css": "npm run lint:css"
+  },
+  "dependencies": {
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
+    "@semantic-release/changelog": "5.0.1",
+    "commitizen": "4.2.2"
   }
 }
