--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": false,
   "description": "A components library to create apps from zero to production",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alanmaranto/Productivity-Design-System.git"
+  },
   "scripts": {
     "build:storybook": "build-storybook",
     "build:tokens": "node ./scripts/build-custom-properties",
